src/test/resources/org/nest/nestml/_cocos/valid/multipleInhExcModifiers.nestml
neuron MultipleInhExc:
  input:
    inhBuffer nS <- inhibitory spike
    excBuffer nS <- excitatory spike
    inhExcBuffer nS <- inhibitory excitatory spike
  end

  update:
  end
end
