src/test/resources/org/nest/nestml/_cocos/invalid/multipleInhExcModifiers.nestml
neuron MultipleInhExc:
  input:
    inhBuffer nS <- inhibitory inhibitory spike
    excBuffer nS <- excitatory excitatory excitatory spike
    inhExcBuffer nS <- inhibitory excitatory inhibitory excitatory spike
  end

  update:
  end
end
